// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-alert contentDisplayMode should render with expandable contentDisplayMode 1`] = `
<modus-wc-alert alert-description="A very long description that should be truncated when displayed in expandable mode." alert-title="Title" content-display-mode="expandable">
  <!---->
  <div class="modus-wc-alert modus-wc-alert--expandable modus-wc-alert-info" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div class="modus-wc-alert-content modus-wc-alert-content--expandable">
      <div class="title">
        Title
      </div>
      <div class="modus-wc-alert-expandable-body">
        <div class="description modus-wc-alert-body-text--collapsed" id="modus-wc-alert-body-37">
          A very long description that should be truncated when displayed in expandable mode.
        </div>
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert contentDisplayMode should wrap slot content in expandable body when expandable 1`] = `
<modus-wc-alert content-display-mode="expandable">
  <!---->
  <div class="modus-wc-alert modus-wc-alert--expandable modus-wc-alert-info" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div class="modus-wc-alert-content modus-wc-alert-content--expandable">
      <div class="modus-wc-alert-expandable-body">
        <div class="modus-wc-alert-body-text--collapsed modus-wc-alert-slot-content" id="modus-wc-alert-body-40">
          <div slot="content">
            Custom slot content that is long enough to truncate
          </div>
        </div>
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render error variant with alert icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="error">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-error" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        alert
      </i>
    </modus-wc-icon>
    <div class="modus-wc-alert-content">
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render info variant with info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="info">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div class="modus-wc-alert-content">
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render neutral variant with neutral styling and info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="neutral">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-neutral" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div class="modus-wc-alert-content">
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render success variant with check_circle icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="success">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-success" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        check_circle
      </i>
    </modus-wc-icon>
    <div class="modus-wc-alert-content">
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render warning variant with info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="warning">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-warning" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        warning
      </i>
    </modus-wc-icon>
    <div class="modus-wc-alert-content">
      <div class="title">
        Custom title
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render with custom props 1`] = `
<modus-wc-alert alert-description="Custom description" alert-title="Custom title" custom-class="test-class" icon="help" variant="info">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info test-class" role="status">
    <modus-wc-icon custom-class="modus-wc-alert-icon" name="help" variant="outlined"></modus-wc-icon>
    <div class="modus-wc-alert-content">
      <div class="title">
        Custom title
      </div>
      <div class="description">
        Custom description
      </div>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render with default props 1`] = `
<modus-wc-alert alerttitle="Custom title">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info" role="status">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center" custom-class="modus-wc-alert-icon">
      <i aria-hidden="true" class="modus-icons-outlined modus-wc-alert-icon modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div class="modus-wc-alert-content"></div>
  </div>
</modus-wc-alert>
`;
